--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DUMP is to read and write .json file as Database",
   "main": "index.js",
   "scripts": {
-    "start": "npm app.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
